--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
     // badge
     implementation 'com.nex3z:notification-badge:1.0.4'
+    //green eventbus
+    implementation("org.greenrobot:eventbus:3.3.1")
 }
