--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.nex3z:notification-badge:1.0.4'
     //green eventbus
     implementation("org.greenrobot:eventbus:3.3.1")
+    //paper
+    implementation 'io.github.pilgr:paperdb:2.7.2'
 }
