--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation("org.greenrobot:eventbus:3.3.1")
     //paper
     implementation 'io.github.pilgr:paperdb:2.7.2'
+    //gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
