--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,5 @@ dependencies {
     implementation 'io.github.pilgr:paperdb:2.7.2'
     //gson
     implementation 'com.google.code.gson:gson:2.10.1'
-    //nghia
+    //nghia comment
 }
