--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo1"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.DACS3"
@@ -18,6 +18,7 @@
         <activity
             android:name=".activity.XemDonActivity"
             android:exported="false" />
+
         <activity
             android:name=".activity.SearchActivity"
             android:exported="false" />
